# sample_sensor_kit_launch

./: .pre-commit-config.yaml  LICENSE  README.md  build_depends.repos
.github/: sync-files.yaml
.github/workflows/: build-and-test-differential.yaml  github-release.yaml
aip_s1_description/: CMakeLists.txt  package.xml
aip_s1_description/urdf/: sensors.xacro
aip_s1_launch/: CMakeLists.txt  package.xml
aip_s1_launch/launch/: camera.launch.xml  lidar.launch.xml  sensing.launch.xml
aip_xx2_description/: CMakeLists.txt  package.xml
aip_xx2_description/urdf/: sensors.xacro
camera_description/: CMakeLists.txt
camera_description/urdf/: monocular_camera.xacro
common_sensor_launch/: CHANGELOG.rst  package.xml
common_sensor_launch/launch/: nebula_node_container.launch.py  robosense_Bpearl.launch.xml  robosense_Helios.launch.xml  velodyne_VLP16.launch.xml  velodyne_VLS128.launch.xml  velodyne_node_container.launch.py
imu_description/: CMakeLists.txt
imu_description/urdf/: imu.xacro
livox_description/: CMakeLists.txt  package.xml
livox_description/urdf/: livox_horizon.xacro
pandar_description/: package.xml
pandar_description/urdf/: pandar_40p.xacro  pandar_qt.xacro
sample_sensor_kit_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
sample_sensor_kit_description/config/: sensor_kit_calibration.yaml  sensors_calibration.yaml
sample_sensor_kit_description/urdf/: sensors.xacro  (+1 more)
sample_sensor_kit_launch/: CHANGELOG.rst  CMakeLists.txt  package.xml
single_lidar_sensor_kit_description/: package.xml
single_lidar_sensor_kit_launch/: CMakeLists.txt  package.xml
vls_description/: CMakeLists.txt  package.xml
vls_description/urdf/: VLS-128.urdf.xacro
(+12 files in other folders)
