<?xml version="1.0"?>
<package format="2">
  <name>aip_s1_description</name>
  <version>0.1.0</version>
  <description>The aip_s1_description package</description>

  <maintainer email="yukihiro.saito@tier4.jp">Yukihiro Saito</maintainer>
  <license>Apache 2</license>


  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
