<?xml version="1.0"?>
<package format="2">
  <name>vls_description</name>
  <version>0.1.0</version>
  <description>The vls_description package</description>

  <maintainer email="daisuke.nishimatsu@tier4.jp">Daisuke Nishimatsu</maintainer>
  <license>Apache 2</license>


  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
